gallery - bug on mobile view, fix photo dimensions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,5 +373,6 @@ footer {
         display: contents;
         margin: 0;
         padding: 0;
+        height: 100%;
     }
 }
